# rag-langchain

./: .gitignore  README.md  pyproject.toml
chroma/d0431345-68a1-41ce-b911-b90848e09619/: index_metadata.pickle
src/rag_langchain/: __init__.py  create_database.py  query_data.py
