[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain>=0.1.16",
    "unstructured[md]>=0.11.8",
    "chromadb>=0.4.24",
    "openai>=1.17.1",
    "tiktoken>=0.6.0",
    "langchain-community>=0.0.32",
    "langchain-openai>=0.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
create-db = { cmd = "python ./src/rag_langchain/create_database.py" }
query = {cmd = "python ./src/rag_langchain/query_data.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_langchain"]
